--- a/infra/kafka-cluster-kraft.yaml
+++ b/infra/kafka-cluster-kraft.yaml
@@ -5,20 +5,30 @@ metadata:
   namespace: infra
 spec:
   kafka:
-    version: 4.1.0
-    metadataVersion: 3.7-IV2
+    version: 4.0.0
+    replicas: 1
     listeners:
       - name: plain
         port: 9092
         type: internal
         tls: false
+      - name: external
+        port: 9094
+        type: nodeport
+        tls: false
+        configuration:
+          brokers:
+            - broker: 0
+              advertisedHost: localhost
+              advertisedPort: 9094        
     config:
       offsets.topic.replication.factor: 1
       transaction.state.log.replication.factor: 1
       transaction.state.log.min.isr: 1
       default.replication.factor: 1
       min.insync.replicas: 1
-      auto.create.topics.enable: true
+      inter.broker.listener.name: plain
+      auto.create.topics.enable: "true"
     storage:
       type: ephemeral
   entityOperator:
