--- a/infra/minio-deployment.yaml
+++ b/infra/minio-deployment.yaml
@@ -77,8 +77,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-    - host: "*"
-      http:
+    - http:
         paths:
           - path: /ui
             pathType: Prefix
