--- a/jobs/kafkatominio/manifest/secret.yaml
+++ b/jobs/kafkatominio/manifest/secret.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: crypto
 type: Opaque
 stringData:
-  MINIO_ACCESS_KEY: your-minio-access-key
-  MINIO_SECRET_KEY: your-minio-secret-key
+  MINIO_ACCESS_KEY: minioadmin
+  MINIO_SECRET_KEY: minioadmin123
