--- a/jobs/kafkatominio/manifest/Deployment.yaml
+++ b/jobs/kafkatominio/manifest/Deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: crypto-kafka-consumer
-          image: YOUR_DOCKER_REPO/crypto-kafka-consumer:latest
+          image: satzweb/kafkatominio:latest
           imagePullPolicy: IfNotPresent
           env:
             - name: KAFKA_BOOTSTRAP_SERVERS
