--- a/jobs/kafkatominio/manifest/Deployment.yaml
+++ b/jobs/kafkatominio/manifest/Deployment.yaml
@@ -21,7 +21,7 @@ spec:
           imagePullPolicy: IfNotPresent
           env:
             - name: KAFKA_BOOTSTRAP_SERVERS
-              value: "kafka-kafka-bootstrap.infra.svc.cluster.local:9092"
+              value: "my-cluster-kafka-bootstrap.infra.svc.cluster.local:9092"
             - name: KAFKA_TOPIC
               value: "crypto-prices"
             - name: KAFKA_CONSUMER_GROUP
