updated deployment with minio-service

--- a/jobs/kafkatominio/manifest/Deployment.yaml
+++ b/jobs/kafkatominio/manifest/Deployment.yaml
@@ -32,7 +32,7 @@ spec:
               value: "1.0"
 
             - name: MINIO_ENDPOINT
-              value: "http://minio.infra.svc.cluster.local:9000"
+              value: "http://minio-service.infra.svc.cluster.local:9000"
             - name: MINIO_BUCKET
               value: "feast-feature-store"
             - name: MINIO_PREFIX
