updated deployment with minio-service

--- a/jobs/kafkatominio/manifest/Deployment.yaml
+++ b/jobs/kafkatominio/manifest/Deployment.yaml
@@ -42,6 +42,8 @@ spec:
               value: "60"
             - name: BATCH_MAX_MESSAGES
               value: "5000"
+            - name: KAFKA_PARTITION
+              value: "0"              
 
           envFrom:
             - secretRef:
