--- a/feast/feast_repo/crypto_features/feature_repo/feature_store.yaml
+++ b/feast/feast_repo/crypto_features/feature_repo/feature_store.yaml
@@ -4,8 +4,8 @@ provider: local
 
 offline_store:
     type: postgres
-    # host: postgres-service.infra.svc.cluster.local
-    host: localhost
+    host: postgres-service.infra.svc.cluster.local
+    # host: localhost
     port: 5432
     database: feast_offline
     db_schema: public
@@ -14,6 +14,6 @@ offline_store:
 
 online_store:
     type: redis
-    # connection_string: "redis://redis-master.infra.svc.cluster.local:6379"
-    connection_string: "localhost:6379"
+    connection_string: "redis://redis-master.infra.svc.cluster.local:6379"
+    # connection_string: "localhost:6379"
 
