--- a/feast/Dockerfile
+++ b/feast/Dockerfile
@@ -10,6 +10,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
+
+RUN apt-get update && apt-get install -y bash    
+
 # Copy ONLY Feast repo & jobs (clean and fast)
 COPY feast_repo /app/feast_repo
 
