--- a/feast/manifest/minio-secret.yaml
+++ b/feast/manifest/minio-secret.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: crypto
 type: Opaque
 data:
-  AWS_ACCESS_KEY_ID: bWluaW9hZG1pbg==
-  AWS_SECRET_ACCESS_KEY: bWluaW9hZG1pbjEyMw==
+  # AWS_ACCESS_KEY_ID: bWluaW9hZG1pbg==
+  # AWS_SECRET_ACCESS_KEY: bWluaW9hZG1pbjEyMw==
+  AWS_ACCESS_KEY_ID: ZmVhc3RhZG1pbgo=
+  AWS_SECRET_ACCESS_KEY: ZmVhc3RhZG1pbjEyMwo=  
   AWS_REGION: dXMtZWFzdC0x
