--- a/feast/manifest/feast-materialize-cronjob.yaml
+++ b/feast/manifest/feast-materialize-cronjob.yaml
@@ -15,7 +15,7 @@ spec:
           restartPolicy: Never
           containers:
             - name: feast-materialize
-              image: satzweb/feast-runner:latest2
+              image: satzweb/feast-runner:latest3
               imagePullPolicy: Always
 
               workingDir: /app/feast_repo/crypto_features/feature_repo
@@ -48,7 +48,7 @@ spec:
                 - name: REDIS_PORT
                   value: "6379"
 
-                --- MINIO OFFLINE STORE ACCESS ---
+                # --- MINIO OFFLINE STORE ACCESS ---
                 - name: AWS_ACCESS_KEY_ID
                   valueFrom:
                     secretKeyRef:
